--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.10.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "sweetalert2": "^11.26.4",
     "yup": "^1.7.1"
   },
