--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^6.1.1",
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.3.1",
     "formik": "^2.4.9",
     "moment": "^2.30.1",
     "react": "^19.2.0",
