--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.10.1",
     "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-to-print": "^3.2.0",
     "sweetalert2": "^11.26.16",
     "yup": "^1.7.1"
   },
