--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.10.1",
