--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.3.1",
     "formik": "^2.4.9",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
