--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "antd": "^6.1.1",
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
